[package]
name = "galemu"
version = "0.2.2"
authors = ["Philipp Korber <p.korber@1aim.com>"]

description = "Provides a workaround for generic associated types (GAT) limited to lifetimes (GAL)"
documentation = "https://docs.rs/galemu"
repository = "https://github.com/1aim/galemu"

readme = "./README.md"
keywords = ["lifetime", "associated", "GAT", "GAL", "static" ]
categories = [ "data-structures" ]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }


[dependencies]
